--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,20 +9,68 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Test automtion regression suite</th></tr>
-<tr><td><a href="#t0">Test - FF</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">46,155</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Test - Chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">39,655</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">2</th><th class="num">85,810</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Test - Chrome</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">73,209</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test - FF</a></td><td class="num">1</td><td class="num">0</td><td class="num attn">1</td><td class="num">89,971</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num attn">2</th><th class="num">163,180</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test automtion regression suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test - FF &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.mydemo.SauceTestUpdated</td><td><a href="#m0">checkAddToCartButtonTest</a></td><td rowspan="1">1619799036721</td><td rowspan="1">21711</td></tr><tr><th colspan="4">Test - FF &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.mydemo.SauceTestUpdated</td><td><a href="#m1">checkInventoryItemTest</a></td><td rowspan="1">1619799025657</td><td rowspan="1">2647</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Test - Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.mydemo.SauceTestUpdated</td><td><a href="#m2">checkAddToCartButtonTest</a></td><td rowspan="1">1619799076792</td><td rowspan="1">22138</td></tr><tr><th colspan="4">Test - Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.mydemo.SauceTestUpdated</td><td><a href="#m3">checkInventoryItemTest</a></td><td rowspan="1">1619799067338</td><td rowspan="1">3241</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Test automtion regression suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test - Chrome &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.mydemo.SauceTestUpdated</td><td><a href="#m0">checkAddToCartButtonTest</a></td><td rowspan="1">1620123186852</td><td rowspan="1">43223</td></tr><tr><th colspan="4">Test - Chrome &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.mydemo.SauceTestUpdated</td><td><a href="#m1">checkInventoryItemTest</a></td><td rowspan="1">1620123173764</td><td rowspan="1">2503</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test - FF &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">com.mydemo.SauceTestUpdated</td><td><a href="#m2">checkAddToCartButtonTest</a></td><td rowspan="1">1620123201467</td><td rowspan="1">45305</td></tr><tr><th colspan="4">Test - FF &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.mydemo.SauceTestUpdated</td><td><a href="#m3">checkInventoryItemTest</a></td><td rowspan="1">1620123177612</td><td rowspan="1">3550</td></tr></tbody>
 </table>
-<h2>Test - FF</h2><h3 id="m0">com.mydemo.SauceTestUpdated#checkAddToCartButtonTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.mydemo.SauceTestUpdated.checkAddToCartButtonTest(SauceTestUpdated.java:33)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test - Chrome</h2><h3 id="m0">com.mydemo.SauceTestUpdated#checkAddToCartButtonTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:96)
+	at org.testng.Assert.failNotEquals(Assert.java:776)
+	at org.testng.Assert.assertTrue(Assert.java:44)
+	at org.testng.Assert.assertTrue(Assert.java:54)
+	at com.mydemo.SauceTestUpdated.checkAddToCartButtonTest(SauceTestUpdated.java:34)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
+	at org.testng.SuiteRunner.access$000(SuiteRunner.java:40)
+	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:489)
+	at org.testng.internal.thread.ThreadUtil$1.call(ThreadUtil.java:52)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:832)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.mydemo.SauceTestUpdated#checkInventoryItemTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Test - Chrome</h2><h3 id="m2">com.mydemo.SauceTestUpdated#checkAddToCartButtonTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
-	at com.mydemo.SauceTestUpdated.checkAddToCartButtonTest(SauceTestUpdated.java:33)
-... Removed 29 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test - FF</h2><h3 id="m2">com.mydemo.SauceTestUpdated#checkAddToCartButtonTest</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [true] but found [false]
+	at org.testng.Assert.fail(Assert.java:96)
+	at org.testng.Assert.failNotEquals(Assert.java:776)
+	at org.testng.Assert.assertTrue(Assert.java:44)
+	at org.testng.Assert.assertTrue(Assert.java:54)
+	at com.mydemo.SauceTestUpdated.checkAddToCartButtonTest(SauceTestUpdated.java:34)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:64)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:124)
+	at org.testng.internal.Invoker.invokeMethod(Invoker.java:583)
+	at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:719)
+	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:989)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
+	at org.testng.TestRunner.privateRun(TestRunner.java:648)
+	at org.testng.TestRunner.run(TestRunner.java:505)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
+	at org.testng.SuiteRunner.access$000(SuiteRunner.java:40)
+	at org.testng.SuiteRunner$SuiteWorker.run(SuiteRunner.java:489)
+	at org.testng.internal.thread.ThreadUtil$1.call(ThreadUtil.java:52)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
+	at java.base/java.lang.Thread.run(Thread.java:832)
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m3">com.mydemo.SauceTestUpdated#checkInventoryItemTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
