--- a/test-output/index.html
+++ b/test-output/index.html
@@ -318,24 +318,24 @@ data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'checkAddToCartButtonTest')
 data.setCell(0, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(0, 3, 45305);
+data.setCell(0, 3, 24116);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'checkAddToCartButtonTest')
 data.setCell(1, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(1, 3, 43223);
+data.setCell(1, 3, 22564);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'checkInventoryItemTest')
 data.setCell(2, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(2, 3, 3550);
+data.setCell(2, 3, 3215);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'checkInventoryItemTest')
 data.setCell(3, 2, 'com.mydemo.SauceTestUpdated')
-data.setCell(3, 3, 2503);
+data.setCell(3, 3, 2978);
 window.suiteTableData['Test_automtion_regression_suite']= { tableData: data, tableDiv: 'times-div-Test_automtion_regression_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 52 seconds</span>
               <div id="times-div-Test_automtion_regression_suite">
               </div> <!-- times-div-Test_automtion_regression_suite -->
             </div> <!-- times-div -->
@@ -363,56 +363,56 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.mydemo.SauceTestUpdated</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
-                <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkI...)</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method before">
                 <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkInv...)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkI...)</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">checkInventoryItemTest</span>
-                <span class="method-start">12278 ms</span>
+                <span class="method-start">9448 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">checkInventoryItemTest</span>
-                <span class="method-start">16126 ms</span>
+                <span class="method-start">12702 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown([TestResult name=checkInventoryItemTest status=SUCCESS method=SauceTestUpdated.checkInventoryItemTes...)</span>
-                <span class="method-start">16440 ms</span>
+                <span class="method-start">14072 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(Chrome, 85.0, OS X, Catalina, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkA...)</span>
-                <span class="method-start">19683 ms</span>
+                <span class="method-start">15580 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown([TestResult name=checkInventoryItemTest status=SUCCESS method=SauceTestUpdated.checkInventoryItemTes...)</span>
-                <span class="method-start">22777 ms</span>
+                <span class="method-start">17569 ms</span>
               </div> <!-- configuration-method after -->
-              <div class="test-method">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">checkAddToCartButtonTest</span>
-                <span class="method-start">25366 ms</span>
-              </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setUp(Firefox, 80.0, Windows, 10, browserStack, optional, public void com.mydemo.SauceTestUpdated.checkAdd...)</span>
-                <span class="method-start">25434 ms</span>
+                <span class="method-start">18724 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
                 <span class="method-name">checkAddToCartButtonTest</span>
-                <span class="method-start">39981 ms</span>
+                <span class="method-start">19850 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">checkAddToCartButtonTest</span>
+                <span class="method-start">34511 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest status=FAILURE method=SauceTestUpdated.checkAddToCartButto...)</span>
-                <span class="method-start">70200 ms</span>
+                <span class="method-start">44009 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown([TestResult name=checkAddToCartButtonTest status=FAILURE method=SauceTestUpdated.checkAddToCartButto...)</span>
-                <span class="method-start">87052 ms</span>
+                <span class="method-start">60492 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
