--- a/test-output/old/Test automtion regression suite/methods.html
+++ b/test-output/old/Test automtion regression suite/methods.html
@@ -1,28 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Test automtion regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c977f">  <td>21/05/04 11:12:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@78452606]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1999132560</td>   <td></td> </tr>
-<tr bgcolor="8c977f">  <td>21/05/04 11:12:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@d2de489]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@751345912</td>   <td></td> </tr>
-<tr bgcolor="e968ce">  <td>21/05/04 11:12:53</td>   <td>12270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@78452606]">checkInventoryItemTest</td> 
-  <td>TestNG-tests-2@1999132560</td>   <td></td> </tr>
-<tr bgcolor="e968ce">  <td>21/05/04 11:12:57</td>   <td>16118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@d2de489]">checkInventoryItemTest</td> 
-  <td>TestNG-tests-1@751345912</td>   <td></td> </tr>
-<tr bgcolor="8c977f">  <td>21/05/04 11:12:57</td>   <td>16433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@78452606]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1999132560</td>   <td></td> </tr>
-<tr bgcolor="8c977f">  <td>21/05/04 11:13:01</td>   <td>19679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@78452606]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1999132560</td>   <td></td> </tr>
-<tr bgcolor="8c977f">  <td>21/05/04 11:13:04</td>   <td>22771</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@d2de489]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@751345912</td>   <td></td> </tr>
-<tr bgcolor="e968ce">  <td>21/05/04 11:13:06</td>   <td>25358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@78452606]">checkAddToCartButtonTest</td> 
-  <td>TestNG-tests-2@1999132560</td>   <td></td> </tr>
-<tr bgcolor="8c977f">  <td>21/05/04 11:13:06</td>   <td>25428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@d2de489]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@751345912</td>   <td></td> </tr>
-<tr bgcolor="e968ce">  <td>21/05/04 11:13:21</td>   <td>39973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@d2de489]">checkAddToCartButtonTest</td> 
-  <td>TestNG-tests-1@751345912</td>   <td></td> </tr>
-<tr bgcolor="8c977f">  <td>21/05/04 11:13:51</td>   <td>70193</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@78452606]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1999132560</td>   <td></td> </tr>
-<tr bgcolor="8c977f">  <td>21/05/04 11:14:08</td>   <td>87045</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@d2de489]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@751345912</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>21/05/18 15:35:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@5167f57d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@2088956493</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>21/05/18 15:35:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@17d919b6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1092316571</td>   <td></td> </tr>
+<tr bgcolor="8e8a9d">  <td>21/05/18 15:35:12</td>   <td>9441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@17d919b6]">checkInventoryItemTest</td> 
+  <td>TestNG-tests-2@1092316571</td>   <td></td> </tr>
+<tr bgcolor="8e8a9d">  <td>21/05/18 15:35:15</td>   <td>12695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkInventoryItemTest()[pri:1, instance:com.mydemo.SauceTestUpdated@5167f57d]">checkInventoryItemTest</td> 
+  <td>TestNG-tests-1@2088956493</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>21/05/18 15:35:16</td>   <td>14065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@17d919b6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1092316571</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>21/05/18 15:35:18</td>   <td>15575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@17d919b6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1092316571</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>21/05/18 15:35:20</td>   <td>17562</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@5167f57d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@2088956493</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>21/05/18 15:35:21</td>   <td>18719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTestUpdated.setUp(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@5167f57d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@2088956493</td>   <td></td> </tr>
+<tr bgcolor="8e8a9d">  <td>21/05/18 15:35:22</td>   <td>19843</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@17d919b6]">checkAddToCartButtonTest</td> 
+  <td>TestNG-tests-2@1092316571</td>   <td></td> </tr>
+<tr bgcolor="8e8a9d">  <td>21/05/18 15:35:37</td>   <td>34504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SauceTestUpdated.checkAddToCartButtonTest()[pri:2, instance:com.mydemo.SauceTestUpdated@5167f57d]">checkAddToCartButtonTest</td> 
+  <td>TestNG-tests-1@2088956493</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>21/05/18 15:35:46</td>   <td>44002</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@17d919b6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-2@1092316571</td>   <td></td> </tr>
+<tr bgcolor="a67176">  <td>21/05/18 15:36:03</td>   <td>60486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTestUpdated.tearDown(org.testng.ITestResult, org.testng.ITestContext)[pri:0, instance:com.mydemo.SauceTestUpdated@5167f57d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@2088956493</td>   <td></td> </tr>
 </table>
