--- a/reports/AutomationReport_Fri_May_21_16_22_44_BST_2021.html
+++ b/reports/AutomationReport_Fri_May_21_16_22_44_BST_2021.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>May 21, 2021 01:49:36 PM</span>
+                    <span class='label suite-start-time blue darken-3'>May 21, 2021 04:22:45 PM</span>
 				</a>
 			</li>
 			<li>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkInventoryItemTest</span>
-						<span class='test-time'>May 21, 2021 01:49:42 PM</span>
+						<span class='test-time'>May 21, 2021 04:22:50 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 21, 2021 01:49:42 PM</span>
-	<span class='label end-time'>May 21, 2021 01:49:45 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+77ms</span>
+	<span class='label start-time'>May 21, 2021 04:22:50 PM</span>
+	<span class='label end-time'>May 21, 2021 04:22:53 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+625ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,12 +179,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:49:45 PM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_44_BST_2021.png' width='10%' src='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_44_BST_2021.png' data-src='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_44_BST_2021.png'></td>
+					<td class='timestamp'>4:22:53 PM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Fri_May_21_16_22_52_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Fri_May_21_16_22_52_BST_2021.png' data-src='../screenshot/AutomationReport_Fri_May_21_16_22_52_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:49:45 PM</td>
+					<td class='timestamp'>4:22:53 PM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkInventoryItemTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -197,14 +197,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkInventoryItemTest</span>
-						<span class='test-time'>May 21, 2021 01:49:46 PM</span>
+						<span class='test-time'>May 21, 2021 04:22:52 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 21, 2021 01:49:46 PM</span>
-	<span class='label end-time'>May 21, 2021 01:49:50 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+292ms</span>
+	<span class='label start-time'>May 21, 2021 04:22:52 PM</span>
+	<span class='label end-time'>May 21, 2021 04:22:55 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+423ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -218,12 +218,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:49:50 PM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_48_BST_2021.png' width='10%' src='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_48_BST_2021.png' data-src='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_48_BST_2021.png'></td>
+					<td class='timestamp'>4:22:55 PM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Fri_May_21_16_22_54_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Fri_May_21_16_22_54_BST_2021.png' data-src='../screenshot/AutomationReport_Fri_May_21_16_22_54_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:49:50 PM</td>
+					<td class='timestamp'>4:22:55 PM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkInventoryItemTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -236,14 +236,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkAddToCartButtonTest</span>
-						<span class='test-time'>May 21, 2021 01:49:52 PM</span>
+						<span class='test-time'>May 21, 2021 04:23:01 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 21, 2021 01:49:52 PM</span>
-	<span class='label end-time'>May 21, 2021 01:49:55 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+597ms</span>
+	<span class='label start-time'>May 21, 2021 04:23:01 PM</span>
+	<span class='label end-time'>May 21, 2021 04:23:04 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+302ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -257,12 +257,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:49:55 PM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_54_BST_2021.png' width='10%' src='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_54_BST_2021.png' data-src='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_49_54_BST_2021.png'></td>
+					<td class='timestamp'>4:23:04 PM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Fri_May_21_16_23_03_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Fri_May_21_16_23_03_BST_2021.png' data-src='../screenshot/AutomationReport_Fri_May_21_16_23_03_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:49:55 PM</td>
+					<td class='timestamp'>4:23:04 PM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkAddToCartButtonTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -275,14 +275,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='4'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkAddToCartButtonTest</span>
-						<span class='test-time'>May 21, 2021 01:49:59 PM</span>
+						<span class='test-time'>May 21, 2021 04:23:04 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>May 21, 2021 01:49:59 PM</span>
-	<span class='label end-time'>May 21, 2021 01:50:03 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+244ms</span>
+	<span class='label start-time'>May 21, 2021 04:23:04 PM</span>
+	<span class='label end-time'>May 21, 2021 04:23:08 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+579ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -296,12 +296,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:50:03 PM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_50_02_BST_2021.png' width='10%' src='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_50_02_BST_2021.png' data-src='C:\Users\nilanjan.islam\eclipse-workspace\Demo\Demo/screenshot/AutomationReport_Fri_May_21_13_50_02_BST_2021.png'></td>
+					<td class='timestamp'>4:23:08 PM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Fri_May_21_16_23_07_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Fri_May_21_16_23_07_BST_2021.png' data-src='../screenshot/AutomationReport_Fri_May_21_16_23_07_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>1:50:03 PM</td>
+					<td class='timestamp'>4:23:08 PM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkAddToCartButtonTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -356,19 +356,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>May 21, 2021 01:49:36 PM</div>
+					<div class='panel-lead'>May 21, 2021 04:22:45 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>May 21, 2021 01:50:05 PM</div>
+			 		<div class='panel-lead'>May 21, 2021 04:23:09 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 29s+329ms</div>
+					<div class='panel-lead'>0h 0m 24s+668ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
