--- a/HistoricalReports/reports/AutomationReport_Thu_Jun_10_14_28_42_BST_2021.html
+++ b/HistoricalReports/reports/AutomationReport_Thu_Jun_10_14_28_42_BST_2021.html
@@ -46,7 +46,7 @@
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<li>
                 <a href='#!'>
-                    <span class='label suite-start-time blue darken-3'>Jun 10, 2021 11:43:36 AM</span>
+                    <span class='label suite-start-time blue darken-3'>Jun 10, 2021 02:28:42 PM</span>
 				</a>
 			</li>
 			<li>
@@ -158,14 +158,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkInventoryItemTest_Chrome</span>
-						<span class='test-time'>Jun 10, 2021 11:43:44 AM</span>
+						<span class='test-time'>Jun 10, 2021 02:28:50 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 10, 2021 11:43:44 AM</span>
-	<span class='label end-time'>Jun 10, 2021 11:43:46 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 2s+756ms</span>
+	<span class='label start-time'>Jun 10, 2021 02:28:50 PM</span>
+	<span class='label end-time'>Jun 10, 2021 02:28:53 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+11ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -179,12 +179,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:43:46 AM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Thu_Jun_10_11_43_45_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Thu_Jun_10_11_43_45_BST_2021.png' data-src='../screenshot/AutomationReport_Thu_Jun_10_11_43_45_BST_2021.png'></td>
+					<td class='timestamp'>2:28:53 PM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Thu_Jun_10_14_28_52_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Thu_Jun_10_14_28_52_BST_2021.png' data-src='../screenshot/AutomationReport_Thu_Jun_10_14_28_52_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:43:46 AM</td>
+					<td class='timestamp'>2:28:53 PM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkInventoryItemTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -197,14 +197,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkInventoryItemTest_Firefox</span>
-						<span class='test-time'>Jun 10, 2021 11:43:46 AM</span>
+						<span class='test-time'>Jun 10, 2021 02:28:52 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 10, 2021 11:43:46 AM</span>
-	<span class='label end-time'>Jun 10, 2021 11:43:50 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 4s+101ms</span>
+	<span class='label start-time'>Jun 10, 2021 02:28:52 PM</span>
+	<span class='label end-time'>Jun 10, 2021 02:28:55 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+46ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -218,12 +218,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:43:50 AM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Thu_Jun_10_11_43_49_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Thu_Jun_10_11_43_49_BST_2021.png' data-src='../screenshot/AutomationReport_Thu_Jun_10_11_43_49_BST_2021.png'></td>
+					<td class='timestamp'>2:28:55 PM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Thu_Jun_10_14_28_54_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Thu_Jun_10_14_28_54_BST_2021.png' data-src='../screenshot/AutomationReport_Thu_Jun_10_14_28_54_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:43:50 AM</td>
+					<td class='timestamp'>2:28:55 PM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkInventoryItemTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -236,14 +236,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkAddToCartButtonTest_Chrome</span>
-						<span class='test-time'>Jun 10, 2021 11:43:54 AM</span>
+						<span class='test-time'>Jun 10, 2021 02:29:00 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 10, 2021 11:43:54 AM</span>
-	<span class='label end-time'>Jun 10, 2021 11:43:58 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+433ms</span>
+	<span class='label start-time'>Jun 10, 2021 02:29:00 PM</span>
+	<span class='label end-time'>Jun 10, 2021 02:29:03 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+1ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -257,12 +257,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:43:58 AM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Thu_Jun_10_11_43_57_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Thu_Jun_10_11_43_57_BST_2021.png' data-src='../screenshot/AutomationReport_Thu_Jun_10_11_43_57_BST_2021.png'></td>
+					<td class='timestamp'>2:29:03 PM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Thu_Jun_10_14_29_02_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Thu_Jun_10_14_29_02_BST_2021.png' data-src='../screenshot/AutomationReport_Thu_Jun_10_14_29_02_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:43:58 AM</td>
+					<td class='timestamp'>2:29:03 PM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkAddToCartButtonTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -275,14 +275,14 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='4'>
 					<div class='test-heading'>
 						<span class='test-name'>com.mydemo.SauceTestUpdated  ::  checkAddToCartButtonTest_Firefox</span>
-						<span class='test-time'>Jun 10, 2021 11:44:00 AM</span>
+						<span class='test-time'>Jun 10, 2021 02:29:06 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jun 10, 2021 11:44:00 AM</span>
-	<span class='label end-time'>Jun 10, 2021 11:44:03 AM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+310ms</span>
+	<span class='label start-time'>Jun 10, 2021 02:29:06 PM</span>
+	<span class='label end-time'>Jun 10, 2021 02:29:09 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 3s+855ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -296,12 +296,12 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:44:03 AM</td>
-					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Thu_Jun_10_11_44_02_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Thu_Jun_10_11_44_02_BST_2021.png' data-src='../screenshot/AutomationReport_Thu_Jun_10_11_44_02_BST_2021.png'></td>
+					<td class='timestamp'>2:29:09 PM</td>
+					<td class='step-details'><b><font color>Screenshot of Passed Step</font></b><img data-featherlight='../screenshot/AutomationReport_Thu_Jun_10_14_29_09_BST_2021.png' width='10%' src='../screenshot/AutomationReport_Thu_Jun_10_14_29_09_BST_2021.png' data-src='../screenshot/AutomationReport_Thu_Jun_10_14_29_09_BST_2021.png'></td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>11:44:03 AM</td>
+					<td class='timestamp'>2:29:09 PM</td>
 					<td class='step-details'><span class='label white-text green'><b>Test Method checkAddToCartButtonTestSuccessfull</b></span></td>
 				</tr>
 			</tbody>
@@ -356,19 +356,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jun 10, 2021 11:43:36 AM</div>
+					<div class='panel-lead'>Jun 10, 2021 02:28:42 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jun 10, 2021 11:44:05 AM</div>
+			 		<div class='panel-lead'>Jun 10, 2021 02:29:12 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 29s+467ms</div>
+					<div class='panel-lead'>0h 0m 29s+950ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
